--- a/.github/workflows/window-release.yml
+++ b/.github/workflows/window-release.yml
@@ -109,7 +109,7 @@ jobs:
             strip=False,
             upx=True,
             upx_exclude=[],
-            runtime_tmpdir=None,
+            runtime_tmpdir='.',
             console=True,
             disable_windowed_traceback=False,
             argv_emulation=False,
@@ -163,7 +163,7 @@ jobs:
             strip=False,
             upx=True,
             upx_exclude=[],
-            runtime_tmpdir=None,
+            runtime_tmpdir='.',
             console=True,
             disable_windowed_traceback=False,
             argv_emulation=False,
@@ -176,9 +176,8 @@ jobs:
         
     - name: Build EXE files
       run: |
-        # 使用 --runtime-tmpdir 选项确保运行时文件正确打包
-        pyinstaller sender.spec --runtime-tmpdir "."
-        pyinstaller receiver.spec --runtime-tmpdir "."
+        pyinstaller sender.spec
+        pyinstaller receiver.spec
         
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
