--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
-numpy==2.2.1
-opencv_python==4.10.0.84
-Pillow==11.1.0
+MouseInfo==0.1.3
+numpy==1.24.4
+opencv-python==4.5.5.64
+Pillow==9.3.0
 PyAutoGUI==0.9.54
-PyQt6==6.8.0
-PyQt6_sip==13.9.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc==10.3.2
+pyobjc-core==10.3.2
+pyperclip==1.9.0
+pypng==0.20220715.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.15.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pytweening==1.2.0
 pyzbar==0.1.9
-qrcode==8.0
+qrcode==7.4.2
+rubicon-objc==0.4.9
+typing_extensions==4.12.2
